--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <section id="index"><!-- function buildIndex() --></section>
         <section id="content">
             <header>
-                <h1>JavaScript Flashcards: <span>Level Up your JS to ES6</span></h1>
-                <h2>Use arrows to navigate through the&nbsp;cards. <span>Click card to see definition.</span></h2>
+                <h1>vocabulary form Flashcards: <span>Level Up your English skills</span></h1>
+                <h2>Use arrows to navigate through the&nbsp;cards. <span>Click card to see answer.</span></h2>
             </header>
             <section id="flashcards">
                 <button id="prev"aria-label="previous"></button>
